--- a/css/main.css
+++ b/css/main.css
@@ -137,3 +137,71 @@ body {
     background-color: rgb(188, 255, 182);
     text-decoration: line-through;
 }
+
+
+/* Modal Dialog */
+
+.hide-modal {
+    display: none;
+    visibility: hidden;
+}
+
+.confirm-modal {
+    position: fixed;
+    background-color: rgba(255, 255, 255, 0.803);
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-container {
+    background-color: rgb(255, 255, 255);
+    padding: 20px;
+    border-radius: 5px;
+    width: clamp(400px, 50vw ,500px);
+    box-shadow: 2px 2px 4px gray;
+}
+
+.modal-container h4 {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.modal-container h4 img {
+    width: 80px;
+    padding: 15px;
+}
+
+.modal-container h4 span {
+    font-size: 1.5em;
+}
+
+.btns {
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    margin-top: 25px;
+}
+
+.btns button {
+    padding: 10px 15px;
+    border: none;
+    outline: none;
+    box-shadow: 2px 2px 2px gray;
+    cursor: pointer;
+}
+
+.btns button:nth-child(1) {
+    background-color: rgb(168, 16, 16);
+    color: white;
+    font-weight: bold;
+}
+
+.btns button:nth-child(2) {
+    background-color: rgb(53, 53, 53);
+    color: white;
+    font-weight: bold;
+}
